# tg_articles_code

./: .gitignore  README.MD  pyproject.toml  ТЕХНИЧЕСКОЕ_ЗАДАНИЕ.md
src/: main.py
src/handler/: __init__.py  handler.py
src/service/: GroupService.py  __init__.py
src/sheet/: Code.py  __init__.py  Сatalogue.py
src/utils/: __init__.py  decorators.py
